profilelist1exp/unpackaged/objects/Partner_Track_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Group_AffinityId__c</fullName>
        <externalId>true</externalId>
        <label>Master Group AffinityId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTR_AffinityId__c</fullName>
        <externalId>true</externalId>
        <label>PTR AffinityId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Track_AffinityId__c</fullName>
        <externalId>true</externalId>
        <label>Partner Track AffinityId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relationship Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Motion_Account_AffinityId__c</fullName>
        <externalId>true</externalId>
        <label>Sales Motion Account AffinityId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Partner Track Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTR-{0000}</displayFormat>
        <label>PTR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Track Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>